--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@
     </li> 
     <li>1 tbsp of butter</li>
   </ul>
+  <ol>
+    <li>Spread butter on bread and frying pan
+    <li>Place bread in frying pan and fry
+    <li>Add cheese on top of bread
+    <li>Cover with second slice of bread
+    <li>Turn over and fry for 2 minutes
+  </ol>
 
   <!-- Write your HTML in this file -->
 
